# librefang

./: .commit-msg.txt  .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CITATION_AUDIT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.full  Dockerfile.rust-dev  GOVERNANCE.md  MAINTAINERS.md  NAS_BACKUP.md  README.de.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh.md  REMEDIATION.md  SECURITY.md  config.toml  cron_jobs.json  custom_models.json  deny.toml  entrypoint.sh  flake.nix  fly.toml  justfile  librefang.toml.example  (+6 more)
crates/librefang-acp/: Cargo.toml
crates/librefang-acp/src/: error.rs  events.rs  fs.rs  kernel_adapter.rs  lib.rs  permission.rs  prompt.rs  server.rs  session.rs  terminal.rs
crates/librefang-acp/tests/: acp_integration.rs
crates/librefang-api/: Cargo.toml  README.md  build.rs
crates/librefang-api/dashboard/: .gitignore  AGENTS.md  AUDIT_IGNORES.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
crates/librefang-api/dashboard-react/: package.json  pnpm-lock.yaml  vite.config.ts
crates/librefang-api/src/: acp_pipe.rs  acp_uds.rs  channel_bootstrap.rs  channel_bridge.rs  client_ip.rs  config_store_overlay.rs  error.rs  extensions.rs  extractors.rs  idempotency.rs  lib.rs  login_page.html  mcp_oauth.rs  middleware.rs  oauth.rs  openai_compat.rs  openapi.rs  openrouter_catalog.rs  passkey.rs  password_hash.rs  rate_limiter.rs  routes.rs  secrets_env.rs  server.rs  telemetry.rs  terminal.rs  terminal_tmux.rs  trajectory.rs  triggers.rs  types.rs  validation.rs  versioning.rs  webchat.rs  webhook_store.rs  workflow.rs  ws.rs
crates/librefang-api/static/: index_body.html
crates/librefang-api/tests/: a2a_routes_integration.rs  access_log_agent_id_test.rs  access_log_session_id_test.rs  account_tests.rs  agent_channels_routes_test.rs  agent_identity_registry_test.rs  agent_kv_authz_integration.rs  agents_capabilities_files_integration.rs  agents_clone_bulk_integration.rs  agents_routes_integration.rs  api_deny_unknown_fields_test.rs  api_integration_test.rs  approvals_c13_hardening_test.rs  approvals_routes_integration.rs  async_task_tracker_runtime_test.rs  audit_relations_acl_test.rs  audit_routes_integration.rs  auth_config_routes_tests.rs  auth_public_allowlist.rs  authz_routes_integration.rs  auto_dream_routes_integration.rs  budget_routes_test.rs  channel_send_mirror_test.rs  channel_webhooks_test.rs  channels_routes_test.rs  config_routes_integration.rs  config_schema_golden.rs  config_schema_overlay.rs  config_status_session_count_test.rs  config_store_overlay_test.rs  credential_pools_routes_test.rs  daemon_lifecycle_test.rs  dashboard_snapshot_cache_test.rs  dead_route_audit_test.rs  declarative_triggers_test.rs  error_envelope_request_id_test.rs  goals_routes_integration.rs  hands_routes_integration.rs  hooks_commands_routes_integration.rs  idempotency_test.rs  (+52 more)
crates/librefang-channels/: AGENTS.md  Cargo.toml  README.md
crates/librefang-channels/benches/: dispatch.rs
crates/librefang-channels/src/: attachment_enrich.rs  bluesky.rs  bridge.rs  channels-allowlist.txt  dingtalk.rs  discord.rs  discourse.rs  email.rs  embedded_sdk.rs  feishu.rs  flock.rs  formatter.rs  gitter.rs  google_chat.rs  gotify.rs  group_history.rs  guilded.rs  http_client.rs  irc.rs  keybase.rs  lib.rs  line.rs  linkedin.rs  mastodon.rs  matrix.rs  mattermost.rs  message_journal.rs  message_truncator.rs  messenger.rs  mqtt.rs  mumble.rs  nextcloud.rs  nostr.rs  ntfy.rs  pumble.rs  qq.rs  rate_limiter.rs  reddit.rs  revolt.rs  rocketchat.rs  (+22 more)
crates/librefang-channels/tests/: bridge_integration_test.rs  sidecar_protocol_conformance.rs
crates/librefang-cli/: Cargo.toml  README.md  build.rs
crates/librefang-cli/src/: acp.rs  bundled_agents.rs  cli.rs  desktop_install.rs  doctor.rs  dotenv.rs  http_client.rs  i18n.rs  launcher.rs  log_filter.rs  main.rs  mcp.rs  progress.rs  table.rs  templates.rs  ui.rs
crates/librefang-cli/templates/: init_default_config.toml  init_wizard_config.toml  (+1 more)
crates/librefang-desktop/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.desktop.conf.json  tauri.ios.conf.json
crates/librefang-hands/: Cargo.toml
crates/librefang-kernel/: AGENTS.md  Cargo.toml  README.md
crates/librefang-kernel-handle/: Cargo.toml
crates/librefang-llm-drivers/: Cargo.toml  README.md
crates/librefang-memory/: Cargo.toml  README.md
crates/librefang-memory-wiki/: Cargo.toml
crates/librefang-runtime/: AGENTS.md  Cargo.toml  README.md  build.rs  openrouter-models.snapshot.json
crates/librefang-runtime-apply-patch/: Cargo.toml
crates/librefang-runtime-browser/: Cargo.toml
crates/librefang-runtime-mcp/: Cargo.toml
crates/librefang-runtime-media/: Cargo.toml  README.md
crates/librefang-storage/: Cargo.toml
crates/librefang-subprocess/: Cargo.toml  README.md
crates/librefang-telemetry/: Cargo.toml
crates/librefang-testing/: Cargo.toml
crates/librefang-types/: AGENTS.md  Cargo.toml  README.md
crates/librefang-uar-spec/: Cargo.toml
crates/ruvector-domain-expansion/: Cargo.toml
crates/ruvector-math/: Cargo.toml
crates/ruvector-solver/: Cargo.toml
sdk/python/: .gitignore  README.md  pyproject.toml  setup.py
sdk/rust/: Cargo.toml  README.md
xtask/: Cargo.toml  README.md
xtask/baselines/: agent.sha256  config.sha256  openapi.sha256
xtask/src/: api_docs.rs  bench.rs  build_timings.rs  build_web.rs  changelog.rs  check_changed.rs  check_links.rs  ci.rs  clean_all.rs  codegen.rs  contributors.rs  coverage.rs  db.rs  deps.rs  dev.rs  dist.rs  docker.rs  doctor.rs  fmt.rs  integration_test.rs  lib.rs  license_check.rs  loc.rs  local_check_mode.rs  main.rs  migrate.rs  plugins.rs  pre_commit.rs  publish_npm_binaries.rs  publish_pypi_binaries.rs  publish_sdks.rs  release.rs  schema_check.rs  setup.rs  sync_versions.rs  update_deps.rs
(+6002 files in other folders)
