[package]
name = "librefang-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel Bridge Layer — pluggable messaging integrations for LibreFang"
readme = "README.md"

[features]
# No cargo features. Every channel adapter ships as a sidecar
# (`librefang.sidecar.adapters.*` in `sdk/python/`); the crate
# itself just provides the trampoline (`sidecar.rs`), the bridge
# types, and shared helpers. The historical `channel-*` and
# `all-channels` feature flags are gone — their last consumer was
# `librefang-api` which no longer references them.
default = []

[dependencies]
librefang-types = { path = "../librefang-types" }
bitflags = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }
axum = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
html-escape = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
pdf-extract = "0.10"
regex = { workspace = true }
regex-lite = { workspace = true }
smallvec = { workspace = true }
webpki-roots = { workspace = true }
rustls-native-certs = { workspace = true }
urlencoding = { workspace = true }

# Channel-specific optional dependencies
# `rsa` was a `channel-google-chat`-only dep for service-account JWT
# signing; google_chat migrated to a sidecar, no remaining consumer.
aes = { version = "0.9", optional = true }
cbc = { version = "0.2", optional = true }
rustls = { workspace = true, features = ["ring"] }

# Email-sidecar migration (#…): the `lettre` / `imap` /
# `rustls-connector` / `rustls-pemfile` / `mailparse` optional deps
# the in-process channel-email feature used to gate are removed
# alongside the adapter — the sidecar runs on Python's stdlib
# `imaplib` + `smtplib` + `email` packages and pulls nothing of the
# sort into the Rust workspace.

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
wiremock = "0.6"
tower = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "dispatch"
harness = false

[lints]
workspace = true
