[package]
name = "librefang-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the LibreFang Agent OS"

[features]
default = ["librefang-api/all-channels", "telemetry", "surreal-backend"]
all-channels = ["librefang-api/all-channels"]
mini = ["librefang-api/mini"]
telemetry = ["librefang-api/telemetry", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

# Phase 7 of `surrealdb-storage-swap`: db-explorer and storage-migrate
# subcommands are gated on the storage backend they target.
# `surreal-backend` is on by default so the live deployment path stays
# zero-config; `sqlite-backend` is opt-in for the legacy stack and the
# SQLite → Surreal migrator.
surreal-backend = [
    "dep:librefang-storage",
    "librefang-storage/surreal-backend",
    "librefang-api/surreal-backend",
]
sqlite-backend = [
    "dep:librefang-storage",
    "dep:rusqlite",
    "librefang-storage/sqlite-backend",
    "librefang-api/sqlite-backend",
]

[[bin]]
name = "librefang"
path = "src/main.rs"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-kernel = { path = "../librefang-kernel" }
librefang-api = { path = "../librefang-api", default-features = false }
librefang-migrate = { path = "../librefang-migrate" }
librefang-skills = { path = "../librefang-skills" }
librefang-extensions = { path = "../librefang-extensions" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
chrono = { workspace = true }
walkdir = { workspace = true }
librefang-runtime = { path = "../librefang-runtime" }
librefang-storage = { path = "../librefang-storage", optional = true, default-features = false }
rusqlite = { workspace = true, optional = true }
uuid = { workspace = true }
ratatui = { workspace = true }
colored = { workspace = true }
libc = "0.2"
fluent = "0.17"
unic-langid = "0.9"
open = "5.3.3"
toml_edit = "0.25.8"
rustls = "0.23"
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }
