[package]
name = "librefang-hands"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hands system for LibreFang — curated autonomous capability packages"

[dependencies]
librefang-types = { path = "../librefang-types" }
librefang-skills = { path = "../librefang-skills" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
librefang-runtime = { path = "../librefang-runtime" }
wiremock = "0.6"
serial_test = "3"

[lints]
workspace = true
