[package]
name = "librefang-llm-drivers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Concrete LLM provider drivers (anthropic, openai, gemini, …) implementing the librefang-llm-driver trait"
readme = "README.md"

[features]
default = []
## Enables the UAR (Universal Agent Runtime) driver which wraps liter-llm's
## unified `provider/model` client for 142+ providers. Off-by-default to keep
## the dependency tree small for builds that do not need it.
uar-driver = ["dep:universal-agent-runtime"]

[dependencies]
# UAR — optional; only compiled when the `uar-driver` feature is enabled.
#
# Notes:
# * `default-features = false` keeps Postgres (`postgres-backend` → `sqlx` →
#   `libsqlite3-sys`) and the MemPalace knowledge graph (`memory-palace` →
#   `mempalace-core` → bundled `rusqlite`) out of the build, both of which
#   conflict with librefang's own `rusqlite`/`libsqlite3-sys` versions.
# * `surreal-backend` is enabled explicitly so UAR uses embedded SurrealDB
#   (RocksDB) for persistence — fully self-contained, no external services.
# * 2026-06-17 update: bumped to GQAdonis/universal-agent-runtime `main`
#   (rev 0f9385d4), which additionally ships a standalone `universal-agent-runtime`
#   binary (Axum + gRPC/SSE server, `src/main.rs`) — the "sidecar" build option.
#   This in-process `uar-driver` library link is retained for now; pinned to a
#   `rev` (not a moving branch) for reproducible builds. See the sidecar
#   migration assessment in docs/architecture/uar-sidecar-assessment.md — running
#   UAR as a supervised sidecar (like channel sidecars) would decouple its heavy
#   transitive tree (kreuzberg, surrealdb, liter-llm, the Leptos frontend) from
#   librefang's build and remove a recurring upstream-merge break surface.
#   See: https://github.com/GQAdonis/universal-agent-runtime/tree/main
universal-agent-runtime = { git = "https://github.com/GQAdonis/universal-agent-runtime.git", rev = "0f9385d416ec957cf4ed66d1f9e7640fb15c269a", optional = true, default-features = false, features = ["surreal-backend"] }

librefang-types = { path = "../librefang-types" }
librefang-llm-driver = { path = "../librefang-llm-driver" }
librefang-http = { path = "../librefang-http" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
tracing-opentelemetry = { workspace = true }
metrics = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
serial_test = "3"
tempfile = { workspace = true }
wiremock = "0.6"
opentelemetry_sdk = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
