[package]
name = "librefang-llm-drivers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Concrete LLM provider drivers (anthropic, openai, gemini, …) implementing the librefang-llm-driver trait"
readme = "README.md"

[features]
default = []
## Enables the UAR (Universal Agent Runtime) driver which wraps liter-llm's
## unified `provider/model` client for 142+ providers. Off-by-default to keep
## the dependency tree small for builds that do not need it.
uar-driver = ["dep:universal-agent-runtime"]

[dependencies]
# UAR — optional; only compiled when the `uar-driver` feature is enabled.
#
# Notes:
# * `default-features = false` keeps Postgres (`postgres-backend` → `sqlx` →
#   `libsqlite3-sys`) and the MemPalace knowledge graph (`memory-palace` →
#   `mempalace-core` → bundled `rusqlite`) out of the build, both of which
#   conflict with librefang's own `rusqlite`/`libsqlite3-sys` versions.
# * `surreal-backend` is enabled explicitly so UAR uses embedded SurrealDB
#   (RocksDB) for persistence — fully self-contained, no external services.
# * 2026-06-17: tried bumping the in-process link to UAR `main` (rev 0f9385d4) —
#   which ships the new standalone `universal-agent-runtime` Axum+gRPC binary (the
#   "sidecar" option) — but REVERTED. UAR `main` fetches its `kreuzberg` submodule
#   over private SSH (`ssh://git@github.com/GQAdonis/kreuzberg.git`); the
#   `sync-gqadonis-745b4c1` branch exists precisely to rewrite those submodule URLs
#   to public HTTPS so CI can resolve them without a deploy key. Pointing at `main`
#   breaks `cargo` dep-resolution on every CI lane (fmt/clippy/test/build), not just
#   the daemon. **To bump the in-process UAR, first cut a fresh `sync-gqadonis-<sha>`
#   branch in GQAdonis/universal-agent-runtime that rebases the new UAR onto the
#   .gitmodules→HTTPS fix, then point here at that branch.**
#   This SSH-submodule fragility is itself another reason to migrate UAR to a
#   supervised SIDECAR (a prebuilt binary sidesteps the whole submodule fetch).
#   See docs/architecture/uar-sidecar-assessment.md.
universal-agent-runtime = { git = "https://github.com/GQAdonis/universal-agent-runtime.git", branch = "sync-gqadonis-745b4c1", optional = true, default-features = false, features = ["surreal-backend"] }

librefang-types = { path = "../librefang-types" }
librefang-llm-driver = { path = "../librefang-llm-driver" }
librefang-http = { path = "../librefang-http" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
tracing-opentelemetry = { workspace = true }
metrics = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
serial_test = "3"
tempfile = { workspace = true }
wiremock = "0.6"
opentelemetry_sdk = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
