[package]
name = "librefang-llm-drivers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Concrete LLM provider drivers (anthropic, openai, gemini, …) implementing the librefang-llm-driver trait"
readme = "README.md"

[features]
default = []
## Enables the UAR (Universal Agent Runtime) driver which wraps liter-llm's
## unified `provider/model` client for 142+ providers. Off-by-default to keep
## the dependency tree small for builds that do not need it.
uar-driver = ["dep:universal-agent-runtime"]

[dependencies]
# UAR — optional; only compiled when the `uar-driver` feature is enabled.
#
# Notes:
# * `default-features = false` keeps Postgres (`postgres-backend` → `sqlx` →
#   `libsqlite3-sys`) and the MemPalace knowledge graph (`memory-palace` →
#   `mempalace-core` → bundled `rusqlite`) out of the build, both of which
#   conflict with librefang's own `rusqlite`/`libsqlite3-sys` versions.
# * `surreal-backend` is enabled explicitly so UAR uses embedded SurrealDB
#   (RocksDB) for persistence — fully self-contained, no external services.
# * Upstream UAR (Prometheus-AGS) declares its `prometheus-skill-system` and
#   `prometheus-entity-management` submodules with `git@github.com:` SSH URLs.
#   Cargo resolves UAR as a git dependency on CI runners that carry no SSH deploy
#   key, so pointing straight at Prometheus-AGS breaks dep-resolution on every
#   lane (fmt/clippy/test/build), not just the daemon — this was tried on
#   2026-06-17 and reverted. The `sync-gqadonis-<sha>` branches in
#   GQAdonis/universal-agent-runtime exist precisely to rebase upstream UAR onto
#   a .gitmodules→HTTPS rewrite (all three submodule repos are public, so plain
#   HTTPS resolves without credentials).
#   **To bump the in-process UAR, cut a fresh `sync-gqadonis-<sha>` branch that
#   rebases the new UAR onto that .gitmodules fix, then point `rev` here at it.**
#   Pin by `rev`, not `branch`: UAR runs a `build.rs`, and a moving branch makes
#   the build non-reproducible and lets an unrelated UAR push break our CI.
# * 2026-07-11: bumped 745b4c1 → 8c7377a1 (rebased as 0cd664ce). Carries
#   surrealdb =3.2.1 — which must match the workspace pin verbatim, since cargo
#   cannot unify two exact `=` pins on the same crate — plus the newer liter-llm
#   rev d8223de.
#   This SSH-submodule fragility is itself another reason to migrate UAR to a
#   supervised SIDECAR (a prebuilt binary sidesteps the whole submodule fetch).
#   See docs/architecture/uar-sidecar-assessment.md.
universal-agent-runtime = { git = "https://github.com/GQAdonis/universal-agent-runtime.git", rev = "0cd664ce52a19556ae273f231d3e0e3578aba40a", optional = true, default-features = false, features = ["surreal-backend"] }

librefang-types = { path = "../librefang-types" }
librefang-llm-driver = { path = "../librefang-llm-driver" }
librefang-http = { path = "../librefang-http" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { workspace = true }
tracing-opentelemetry = { workspace = true }
metrics = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
serial_test = "3"
tempfile = { workspace = true }
wiremock = "0.6"
opentelemetry_sdk = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
