[package]
name = "librefang-runtime-apply-patch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Patch application for tool subsystem (apply_patch tool) for LibreFang (refs #3710 Phase 1)"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
